apps/musei/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: museum-prod
  labels:
    app.kubernetes.io/name: musei-kasteev
    app.kubernetes.io/part-of: final-project
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
