apps/musei/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: musei-api
  namespace: museum-prod
  labels:
    app.kubernetes.io/name: musei-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: musei-api
  ports:
    - name: http
      port: 4173
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: musei-web
  namespace: museum-prod
  labels:
    app.kubernetes.io/name: musei-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: musei-web
  ports:
    - name: http
      port: 80
      targetPort: http
